{
    "name": "CarControlls",
    "maps": [
        {
            "name": "CarControlsXboxController",
            "id": "a66e2ccf-e839-4def-b99a-600bc808c5f2",
            "actions": [
                {
                    "name": "ReverseCamera",
                    "type": "Button",
                    "id": "ac9831ad-746e-40ec-92c9-5472dd52317b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Horn",
                    "type": "Button",
                    "id": "3984cc66-594a-4ee6-8f58-81cc526ad893",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HandBrake",
                    "type": "Button",
                    "id": "644b6c35-c97d-4750-9974-7e807955f588",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drive",
                    "type": "PassThrough",
                    "id": "3030a497-7da0-4a8d-a0fa-09c03e78cd30",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steer",
                    "type": "PassThrough",
                    "id": "1af34332-8efa-47b1-a383-5dce45b63c98",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "48a05ffa-609a-4034-a4d9-cd8bde00271a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Back",
                    "type": "Button",
                    "id": "726f8cca-366d-4b5e-a961-d2fab16aac4b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9c93755a-b669-44a1-9a69-648d445b4429",
                    "path": "<XInputController>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83cbd05f-6038-422e-abe0-8f96ad5ae27e",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "53a904cc-d88c-4497-b612-234f5316e5fd",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Back",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ffead99-4d2c-4dc4-87d0-0dddb5e59a1d",
                    "path": "<XInputController>/rightStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReverseCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ed95ed9-666b-4211-8c70-5c3cd1f1d6ab",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "202b9692-8aef-4444-ba30-8d906537cab2",
                    "path": "<XInputController>/leftStick/x",
                    "interactions": "",
                    "processors": "AxisDeadzone",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "ForwardReverse",
                    "id": "bbb7cf86-32ba-424f-a3a0-6292c5cdd82b",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "d06dce39-525a-4621-adcc-591a12454a7d",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "c73cf73e-cd33-4799-afca-7378e57af5e4",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "CarControlsKeyboard",
            "id": "6c0e784a-42a5-4b04-aada-2109e2d83029",
            "actions": [
                {
                    "name": "ReverseCamera",
                    "type": "Button",
                    "id": "9b6ffca1-614a-481c-8677-b3f3484c35aa",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Horn",
                    "type": "Button",
                    "id": "43739eb0-0b1e-43ac-a304-654439ddba63",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HandBrake",
                    "type": "Button",
                    "id": "328eccbe-f8dd-4b85-8029-879f256c4a73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Drive",
                    "type": "PassThrough",
                    "id": "dacb8618-2ef9-4541-8030-bc042282125a",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Steer",
                    "type": "PassThrough",
                    "id": "81cc1feb-e25a-4c5c-8e62-7baea054910c",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "97483cba-dcd2-4f03-af63-f3806af40d97",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "daf78dd4-7d6c-4a38-8a9e-ee3eb7ec8565",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e3246d3b-e347-4206-bb77-8a2b9195b9a5",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a5a1bf7-7ec9-474e-9bcd-37614674bcb3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReverseCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f87e239b-0ed9-4d83-802e-512aaf29f5e7",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ReverseCamera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2c3ef876-1dee-4222-a09a-44a0b8dadaf5",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HandBrake",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "SteerAxis",
                    "id": "47316ded-ccdb-4e61-91f5-e0683535a1c1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "ab84e349-9ef4-44fb-8bfe-9178960d8024",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bc4f2247-fdf5-4e71-9ea9-2cb30ae201d7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Steer",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ForwardReverse",
                    "id": "6d19c082-5e61-4854-b8ce-c313d6225053",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a47fc2cb-b496-4a43-bd06-d6fd0e13acbd",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "a6bea7ce-b37d-43c9-8028-edeee5c41807",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Drive",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Look",
            "id": "9c7a7017-0efc-4102-ace5-0eed5cd0334d",
            "actions": [
                {
                    "name": "Look",
                    "type": "PassThrough",
                    "id": "9c397f98-8f95-4d36-ac3f-f1f247cf5e59",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "93cb29bb-eb57-4d30-8ccd-b2919d25fed5",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "15ebbe10-b617-45c9-b24d-0af58b7742af",
                    "path": "<Pointer>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}